media/jackett.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          ports:
            - containerPort: 9117
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: jackett-config
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          ports:
            - containerPort: 8191
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: jackett-config
          hostPath:
            path: /mnt/kube/jackett/config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
spec:
  ports:
    - name: web
      port: 80
      targetPort: 9117
  selector:
    app: jackett
  type: LoadBalancer
