media/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              protocol: TCP
          volumeMounts:
            - mountPath: /data/media
              name: media
            - mountPath: /config
              name: jellyfin-config
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /mnt/kube/jellyfin/data
        - name: jellyfin-config
          hostPath:
            path: /mnt/kube/jellyfin/config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
