media/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /data/media
              name: media
            - mountPath: /config
              name: sonarr-config
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /mnt/kube/jellyfin/data
        - name: sonarr-config
          hostPath:
            path: /mnt/kube/sonarr/config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8989
  selector:
    app: sonarr
  type: LoadBalancer
