media/transmission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:latest
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 51413
              protocol: TCP
            - containerPort: 51413
              protocol: UDP
          volumeMounts:
            - mountPath: /data/media
              name: media
            - mountPath: /config
              name: transmission-config
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /mnt/kube/jellyfin/data
        - name: transmission-config
          hostPath:
            path: /mnt/kube/transmission/config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  ports:
    - name: web
      port: 80
      targetPort: 9091
  selector:
    app: transmission
  type: LoadBalancer
